# Applied-Optimization-Methods-for-Inverse-Problems

./: .gitignore  README.md  pyproject.toml
aomip/: Binning.py  CenterOfRotationCorrection.py  ConjugateGradientDescent.py  FilteredBackProjection.py  FitCircle.py  FlatFieldCorrection.py  ForwardDifferences.py  GaussianFilter.py  GradientDescent.py  GradientDescentClass.py  IterativeShrinkageThresholdingAlgorithm.py  Landweber.py  LandweberClass.py  LeastSquares.py  LinearADMM.py  LowDoseRead.py  NegativeLogTransform.py  Noise.py  OptimizedGradientMethod1.py  Padding.py  ProjectedGradientDescent.py  ProximalGradientMethod.py  ProximalOperators.py  ProximalOptimizedGradientMethod.py  Slicing.py  SubgradientMethod.py  XrayOperator.py  __init__.py  phantom.py
challenge/: main.py  utils.py
homework/: README.md
homework/hw01/: README.md  hw01.py
homework/hw02/: README.md  htc2022.tiff  hw02.py
homework/hw03/: README.md  htc2022_GD-LeastSquares.tif  htc2022_GD-Tikhonov.tif  htc2022_Landweber.tif  htc2022_Landweber_100.0.tif  htc2022_Landweber_10000.0.tif  htc2022_Landweber_1000000.0.tif  htc2022_OGM1-LeastSquares.tif  htc2022_OGM1-Tikhonov.tif  hw03.py
homework/hw04/: README.md  hw04.py
homework/hw05/: README.md  hw05.py
homework/hw06/: README.md  hw06.py
homework/hw07/: README.md  hw07.py
homework/hw08/: README.md  hw08.py
lesson/: 01_exercise01.ipynb  01_exercise02.ipynb  04_exercise01.ipynb  04_exercise02.ipynb  05_estimate_I0.ipynb  05_solver_callback.ipynb
lesson/XLFM_exercise/: requirements.txt
tests/: test_xrayoperator.py
(+19 files in other folders)
