[tool.poetry]
name = "aomip"
version = "0.1.0"
description = "Project for the Practical Course: Applied Optimization Methods for Inverse Problems, offered in the summer term 2023 at TUM"
authors = ["David Frank <frankd@in.tum.de>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
tifffile = "^2023.4.12"
matplotlib = "^3.7.1"
pyqt5 = "^5.15.9"
scikit-image = "^0.20.0"
jupyterlab = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
